# LLVM-Passes

./: .gitignore  CMakeLists.txt  README.md  a.out  branch.c  callgraph.dot  conftest.py  example.c  funcAnalyzeNew  funcParamToConst.bc  functionCallAnalyzeNew  functionCallAnalyzeOld  functioncall.c  functioncall.ll  functioncalllib.c  functioncallnew.bc  lifted.bc  lifted.ll  link.bc  makefile  mutateWrapper.py  newlifted.bc  newlink.bc  newrx.bc  out.bc  patched5.bc  pytest.ini  rx_message_routine-lifted-patched-1.bc  sampleMutateVar.c  sampleMutateVar.ll  test_address.py  test_branch.py  test_digit.py  test_mutants.py
DecompDrop/: callgraph.dot  input-__do_global_dtors_aux.bc  input-__do_global_dtors_aux.c  input-__do_global_dtors_aux.json  input-__do_global_dtors_aux.ll  input-__libc_csu_fini.bc  input-__libc_csu_fini.c  input-__libc_csu_fini.json  input-__libc_csu_init.bc  input-__libc_csu_init.c  input-__libc_csu_init.json  input-_dl_relocate_static_pie.bc  input-_dl_relocate_static_pie.c  input-_dl_relocate_static_pie.json  input-_fini.bc  input-_fini.c  input-_fini.json  input-_init.bc  input-_init.c  input-_init.json  input-_start.bc  input-_start.c  input-_start.json  input-atoi.bc  input-atoi.c  input-atoi.json  input-brake_off.bc  input-brake_off.c  input-brake_off.json  newFunction.c  out.bc  (+1 more)
pass/: CMakeLists.txt  FuncNameChangePass.cpp  LabelPass.cpp  MemoryPass.cpp  Mutate.cpp  MutatePass.cpp  RegisterExitPass.cpp  RegisterInfoPass.cpp  ResearchPasses.cpp  SingleWindowPass.cpp  Skeleton.cpp  SkeletonPass.cpp  WindowPass.cpp  mutateVarType.cpp  rename.cpp
(+52 files in other folders)
